[package]
name = "perf-quinn"
version = "0.11.0"
edition = "2021"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
redis = { version = "0.27", features = ["tokio-comp"] }

[profile.release]
opt-level = 3
lto = true
