[package]
name = "perf-tquic"
version = "1.6.0"
edition = "2021"

[dependencies]
tquic = { version = "1.6", default-features = false }
mio = { version = "1", features = ["net", "os-poll"] }
tokio = { version = "1", features = ["rt", "net", "time", "macros"] }
rcgen = "0.13"
redis = { version = "0.27", features = ["tokio-comp"] }
bytes = "1"
tempfile = "3"
slab = "0.4"

[profile.release]
opt-level = 3
lto = true
